--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "js-sha256": "^0.9.0",
     "log4js": "^6.3.0",
+    "mssql": "^7.2.0",
     "mysql": "^2.18.1",
     "njwt": "^1.1.0",
     "node-schedule": "^2.0.0",
